unpackaged/main/default/objects/MSA_Contract__c/MSA_Contract__c.object-meta.xml
<CustomObject>
    <label>MSA Contract</label>
    <nameField>
        <displayFormat>MSA - {0000}</displayFormat>
        <label>MSA Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSA Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>