unpackaged/main/default/objects/MSA_Contract__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Account with which we are signing the MSA.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MSA Contracts</relationshipLabel>
    <relationshipName>MSA_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>