unpackaged/main/default/objects/MSA_Contract__c/fields/Agreement_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number_ID__c</fullName>
    <label>Agreement Number/ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>