unpackaged/main/default/objects/MSA_Contract__c/fields/Annual_Uplift_Based_on_CPI__c.field-meta.xml
<CustomField>
    <fullName>Annual_Uplift_Based_on_CPI__c</fullName>
    <inlineHelpText>CPI = Consumer Price Index. For customers with this term, Contracted Prices must be manually adjusted each year.</inlineHelpText>
    <label>Annual Uplift Based on CPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>