unpackaged/main/default/objects/MSA_Contract__c/fields/Annual_Uplift_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Uplift_Percentage__c</fullName>
    <inlineHelpText>Enter 0 if there is no contractual annual uplift. A customer&#39;s contracted prices are increased by this amount automatically.</inlineHelpText>
    <label>Annual Uplift Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>