unpackaged/main/default/objects/MSA_Contract__c/fields/Auto_renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_renewal__c</fullName>
    <inlineHelpText>Indicates that the customer will renew for additional one-year terms following the end of the Initial Term unless they provide notice. “Auto-renew” means that the customer does not have to sign paperwork although we still must close an opportunity.</inlineHelpText>
    <label>Auto-renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>