unpackaged/main/default/objects/MSA_Contract__c/fields/Choice_of_Law__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_Law__c</fullName>
    <label>Choice of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List of States</fullName>
                <default>true</default>
                <label>List of States</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>