unpackaged/main/default/objects/MSA_Contract__c/fields/Choice_of_Law_States__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_Law_States__c</fullName>
    <defaultValue>&quot;California&quot;</defaultValue>
    <label>Choice of Law States</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>