unpackaged/main/default/objects/MSA_Contract__c/fields/Client_Audit_Rights__c.field-meta.xml
<CustomField>
    <fullName>Client_Audit_Rights__c</fullName>
    <label>Client Audit Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full access</fullName>
                <default>true</default>
                <label>Full access</label>
            </value>
            <value>
                <fullName>Limited access</fullName>
            </value>
            <value>
                <fullName>No right</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>