unpackaged/main/default/objects/MSA_Contract__c/fields/Client_s_Assignment_Rights__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Assignment_Rights__c</fullName>
    <label>Client&#39;s Assignment Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No assignment w/o consent</fullName>
            </value>
            <value>
                <fullName>No assignment w/o consent (except transfer, merger, acquisition, sale, etc)</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Notification required</fullName>
                <default>true</default>
                <label>Notification required</label>
            </value>
            <value>
                <fullName>Any assignment w/o consent</fullName>
                <isActive>false</isActive>
                <label>Any assignment w/o consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>