unpackaged/main/default/objects/MSA_Contract__c/fields/Client_Termination_Right__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Right__c</fullName>
    <label>Client Termination Right</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No right</fullName>
            </value>
            <value>
                <fullName>Terminate for cause</fullName>
            </value>
            <value>
                <fullName>Terminate for convenience</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>