unpackaged/main/default/objects/MSA_Contract__c/fields/Company_Termination_Right__c.field-meta.xml
<CustomField>
    <fullName>Company_Termination_Right__c</fullName>
    <label>Company Termination Right</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No right</fullName>
            </value>
            <value>
                <fullName>Terminate for cause</fullName>
            </value>
            <value>
                <fullName>Terminate for convenience</fullName>
                <default>true</default>
                <label>Terminate for convenience</label>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>