unpackaged/main/default/objects/MSA_Contract__c/fields/Confidentiality_Provision__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Provision__c</fullName>
    <label>Confidentiality Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>