unpackaged/main/default/objects/MSA_Contract__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>MSA Contracts</relationshipLabel>
    <relationshipName>MSA_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>