unpackaged/main/default/objects/MSA_Contract__c/fields/Early_Termination_Rights_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Rights_Expiration_Date__c</fullName>
    <label>Early Termination Rights Expiration Date</label>
    <type>Date</type>
</CustomField>