unpackaged/main/default/objects/MSA_Contract__c/fields/Future_Functionality_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality_Commitment__c</fullName>
    <label>Future Functionality Commitment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>