unpackaged/main/default/objects/MSA_Contract__c/fields/Indemnification__c.field-meta.xml
<CustomField>
    <fullName>Indemnification__c</fullName>
    <label>Indemnification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expansive - covers gross negligence</fullName>
            </value>
            <value>
                <fullName>Expansive - IP Indemnification outside US, Canada or Europe</fullName>
            </value>
            <value>
                <fullName>Expansive - Covers gross negligence and IP outside US, Canada or Europe</fullName>
            </value>
            <value>
                <fullName>Standard Language - Limited</fullName>
                <default>true</default>
                <label>Standard Language - Limited</label>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>