unpackaged/main/default/objects/MSA_Contract__c/fields/Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Method__c</fullName>
    <label>Invoice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Customer Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>