unpackaged/main/default/objects/MSA_Contract__c/fields/Invoice_Requires_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Requires_PO_Number__c</fullName>
    <label>Invoice Requires PO Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>