unpackaged/main/default/objects/MSA_Contract__c/fields/Invoicing_Frequency_SaaS__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Frequency_SaaS__c</fullName>
    <label>Invoicing Frequency SaaS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
                <default>true</default>
                <label>Annually</label>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly (Anniversary)</fullName>
            </value>
            <value>
                <fullName>Monthly Calendar Billing</fullName>
            </value>
            <value>
                <fullName>Quarterly (Calendar)</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>