unpackaged/main/default/objects/MSA_Contract__c/fields/Invoicing_Terms_Comments__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Terms_Comments__c</fullName>
    <label>Invoicing Terms Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>