unpackaged/main/default/objects/MSA_Contract__c/fields/Invoicing_Terms_SaaS__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Terms_SaaS__c</fullName>
    <label>Invoicing Terms SaaS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In advance</fullName>
                <default>true</default>
                <label>In advance</label>
            </value>
            <value>
                <fullName>In arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>