unpackaged/main/default/objects/MSA_Contract__c/fields/IP_Ownership__c.field-meta.xml
<CustomField>
    <fullName>IP_Ownership__c</fullName>
    <label>IP Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client owns more than just Customizations</fullName>
            </value>
            <value>
                <fullName>Client owns Customizations</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Company expressly owns</fullName>
                <default>true</default>
                <label>Company expressly owns</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>