unpackaged/main/default/objects/MSA_Contract__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <description>Populated for migrated records with the Id from the source system, if applicable.</description>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>