unpackaged/main/default/objects/MSA_Contract__c/fields/License_Restriction_Reservation_of_Right__c.field-meta.xml
<CustomField>
    <fullName>License_Restriction_Reservation_of_Right__c</fullName>
    <label>License Restriction/Reservation of Right</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Minimum Restrictions</fullName>
            </value>
            <value>
                <fullName>PowerFactors language</fullName>
                <default>true</default>
                <label>PowerFactors language</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>