unpackaged/main/default/objects/MSA_Contract__c/fields/Limit_on_Liability_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Limit_on_Liability_Multiple__c</fullName>
    <label>Limit on Liability Multiple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>Silent - no LOL language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>