unpackaged/main/default/objects/MSA_Contract__c/fields/Limit_on_Liability_Source__c.field-meta.xml
<CustomField>
    <fullName>Limit_on_Liability_Source__c</fullName>
    <label>Limit on Liability Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Fees</fullName>
            </value>
            <value>
                <fullName>License Fees only</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Fees paid with a time limit</fullName>
                <default>true</default>
                <label>Fees paid with a time limit</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>