unpackaged/main/default/objects/MSA_Contract__c/fields/Marketing_Materials_Prior_Approval_Need__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials_Prior_Approval_Need__c</fullName>
    <label>Marketing Materials Prior Approval Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>