unpackaged/main/default/objects/MSA_Contract__c/fields/Minimum_Contractual_Term__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Contractual_Term__c</fullName>
    <label>Minimum Contractual Term</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>