unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_End_Date__c</fullName>
    <inlineHelpText>Leave blank to represent an evergreen MSA. Populate only if we have renegotiated a replacement MSA or the customer has chosen not to renew. This field is manually managed and reflects, if populated and the date has passed, a non-active MSA record.</inlineHelpText>
    <label>MSA End Date</label>
    <type>Date</type>
</CustomField>