unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_Minimum_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Minimum_Term_End_Date__c</fullName>
    <formula>MSA_Start_Date__c + (365 * MSA_Term_years__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System-calcuated field (Start Date + Term). This captures the Initial Term period--the date until which the customer is obligated to remain.</inlineHelpText>
    <label>MSA Minimum Term End Date</label>
    <type>Date</type>
</CustomField>