unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Start_Date__c</fullName>
    <description>Agreement Effective Date</description>
    <label>MSA Start Date</label>
    <type>Date</type>
</CustomField>