unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_Status__c.field-meta.xml
<CustomField>
    <fullName>MSA_Status__c</fullName>
    <description>To track the status of MSA</description>
    <label>MSA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Negotiation</fullName>
                <default>true</default>
                <label>In Negotiation</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>