unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_Term_years__c.field-meta.xml
<CustomField>
    <fullName>MSA_Term_years__c</fullName>
    <description>Ex. 3</description>
    <label>MSA Term (years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>