unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>MSA_Termination_Rights__c</fullName>
    <label>MSA Termination Rights</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminate for cause</fullName>
                <default>true</default>
                <label>Terminate for cause</label>
            </value>
            <value>
                <fullName>No right</fullName>
            </value>
            <value>
                <fullName>Terminate for convenience</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>