unpackaged/main/default/objects/MSA_Contract__c/fields/MSA_Title__c.field-meta.xml
<CustomField>
    <fullName>MSA_Title__c</fullName>
    <inlineHelpText>Customer-facing document name such as &quot;Master Services Agreement&quot; or &quot;Data Platform Services Agreement.&quot;</inlineHelpText>
    <label>MSA Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>