unpackaged/main/default/objects/MSA_Contract__c/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <label>NDA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>