unpackaged/main/default/objects/MSA_Contract__c/fields/Non_Solicitation_Clause__c.field-meta.xml
<CustomField>
    <fullName>Non_Solicitation_Clause__c</fullName>
    <label>Non Solicitation Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>