unpackaged/main/default/objects/MSA_Contract__c/fields/Non_standard_Security_Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Security_Exhibit__c</fullName>
    <label>Non-standard Security Exhibit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>