unpackaged/main/default/objects/MSA_Contract__c/fields/Notice_Provision_Address__c.field-meta.xml
<CustomField>
    <fullName>Notice_Provision_Address__c</fullName>
    <label>Notice Provision Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>