unpackaged/main/default/objects/MSA_Contract__c/fields/Notice_Required_to_Change_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Notice_Required_to_Change_Pricing__c</fullName>
    <label>Notice Required to Change Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>