unpackaged/main/default/objects/MSA_Contract__c/fields/Parent_MSA_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Parent_MSA_Opt_Out__c</fullName>
    <inlineHelpText>If a child Account has its own MSA with &quot;Parent MSA Opt Out&quot; checked, that Account has opted out of Ultimate Parent hierarchy MW aggregation and only its own (and its children’s totals) will be considered for pricing volume discounting.</inlineHelpText>
    <label>Parent MSA Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>